# majiang-sz

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
detection/: __init__.py  colab_train.py  download_model.py  mahjong.yaml  model.py  train.py
engine/: __init__.py  analyzer.py  shanten.py  tiles.py
models/: README.md  model_config.json
tests/: test_engine.py
web/: app.js  index.html  manifest.json  style.css  sw.js
